--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -137,6 +137,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 8px;
+  transition: opacity 0.2s;
 
   /* At first, the "Added to cart" message will
      be invisible. Use JavaScript to change the
